# ccl

./: .gitignore  CMakeLists.txt
src/: SuffixTree.c  bitstrings.c  bloom.c  dictionarygen.c  dlist.c  list.c
tests/: test.c
